<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorWhite"
    >
    <TableRow>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/literature_arts"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/literature_arts"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/philosiphy_history"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/philosophy_history"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/finance_law"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finance_law"/>
        </LinearLayout>
    </TableRow>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <TableRow>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/basic_science"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_sciences"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/engineering_technolgy"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engineering_technology"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/agriculture_medical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agriculture_medical"/>
        </LinearLayout>
    </TableRow>
</TableLayout>